Fix minor UX bugs
Turns out that the transition on the file-list element looks bad, so
that has been removed. The drag-over highlight wasn't being properly
removed on file drop; it has been fixed.

--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ a:hover {
   text-align: center;
   position: relative;
   top: 50%;
-  transition: margin-top 0.75s;
   padding-left: 0px;
 }
 
